--- a/QuanLyLichHenCaNhan/app/src/main/res/layout/activity_main.xml
+++ b/QuanLyLichHenCaNhan/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="15dp"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="QUẢN LÝ LỊCH HẸN CÁ NHÂN"
+        android:textSize="24sp"
+        android:gravity="center"
+        android:background="#3F51B5"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TỪ"
+            android:textStyle="bold"
+            android:textSize="18dp"/>
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edtFrom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:background="@drawable/main_stroke"
+            android:padding="8dp"
+            android:inputType="date"
+            android:drawableEnd="@drawable/calendar_svgrepo_com"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="ĐẾN"
+            android:textStyle="bold"
+            android:textSize="18dp"/>
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edtTo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:background="@drawable/main_stroke"
+            android:padding="8dp"
+            android:inputType="date"
+            android:drawableEnd="@drawable/calendar_svgrepo_com"/>
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_margin="20dp"
+        android:layout_weight="1" />
+
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="194dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="45dp"
+        android:layout_marginTop="15dp"
+        android:layout_gravity="center"
+        android:text="Thêm lịch"/>
+
+</LinearLayout>
