--- a/QuanLyLichHenCaNhan/app/src/main/res/layout/activity_main.xml
+++ b/QuanLyLichHenCaNhan/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="15dp"
-    tools:context=".MainActivity">
+    tools:context=".ui.view.MainActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -81,6 +81,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvAppointment"
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_margin="20dp"
