--- a/QuanLyLichHenCaNhan/app/src/main/res/layout/dialogl_add_appointment.xml
+++ b/QuanLyLichHenCaNhan/app/src/main/res/layout/dialogl_add_appointment.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="25dp">
+    android:layout_margin="55dp">
 
 
     <EditText
@@ -17,7 +17,7 @@
         android:padding="10dp"
         android:layout_marginTop="10dp"/>
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/edtDateTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
